[package]
name = "lolypop"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "*"
mlua = { version = "*", features = ["lua54", "vendored"]}
raw-window-handle = "0.6"
ash-window = "*"
winit = { version = "0.29", features = ["rwh_06"] }
ash = { version = "0.38.0" }
rodio = { version = "0.20.1", default-features = true }
image = { version = "*", features = ["png"] }
uuid = { version = "*", features = ["v4"]}
sysinfo = "*"
tokio = { version = "*", features = ["full"] }
pixel-init-render = { path = "src/pixel-init-render" }